# libadcusb

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  Jenkinsfile  Makefile  libadcusb.pc.in  requirements.sh  requirements.txt
docs/: Makefile
docs/source/: api.rst  conf.py  guide.rst  index.rst
examples/gui/: gui.py
examples/pyread/: pyread.py
examples/read/: CMakeLists.txt  read.c
include/: adcusb.h
python/: CMakeLists.txt  adcusb.pxd  adcusb.pyx  setup.py
src/: adcusb.c  adcusb.h
